--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,12 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal/address": "^1.4",
         "drupal/admin_toolbar": "~1.0",
         "drupal/commerce": "^2.6",
         "drupal/console": "~1.0",
         "drupal/core": "~8.5",
+        "drupal/pathauto": "^1.2",
         "drupal/search_api": "~1.0",
         "drupal/swiftmailer": "~1.0",
         "drupal/token": "~1.0",
