--- a/composer.json
+++ b/composer.json
@@ -35,18 +35,20 @@
         "drupal/address": "^1.4",
         "drupal/admin_toolbar": "~1.0",
         "drupal/backup_migrate": "^4.0",
-        "drupal/bootstrap": "^3.12",
-        "drupal/breeze": "^2.0",
+        "drupal/bootstrap_basic_image_gallery": "^1.3",
         "drupal/commerce": "^2.6",
         "drupal/commerce_bootstrap": "^1.0@beta",
         "drupal/commerce_migrate": "^2.0@beta",
+        "drupal/commerce_recurring": "^1.0@beta",
+        "drupal/commerce_shipping": "^2.0@beta",
         "drupal/console": "~1.0",
         "drupal/core": "~8.5",
         "drupal/devel": "^1.2",
         "drupal/metatag": "^1.5",
         "drupal/page_manager": "^4.0@beta",
+        "drupal/panels": "^4.3",
         "drupal/pathauto": "^1.2",
-        "drupal/search_api": "~1.0",
+        "drupal/search_api": "^1.10",
         "drupal/swiftmailer": "~1.0",
         "drupal/token": "~1.0",
         "drupalcommerce/commerce_base": "dev-8.x-1.x",
