Antes del buyscador

--- a/composer.json
+++ b/composer.json
@@ -48,9 +48,13 @@
         "drupal/page_manager": "^4.0@beta",
         "drupal/panels": "^4.3",
         "drupal/pathauto": "^1.2",
+        "drupal/routes_list": "5.x-dev",
         "drupal/search_api": "^1.10",
+        "drupal/search_api_page": "^1.0@alpha",
+        "drupal/simplenews": "^1.0@alpha",
         "drupal/swiftmailer": "~1.0",
         "drupal/token": "~1.0",
+        "drupal/views_merge_rows": "^2.1",
         "drupalcommerce/commerce_base": "dev-8.x-1.x",
         "drush/drush": "^9.2",
         "oomphinc/composer-installers-extender": "^1.1",
