--- a/web/themes/hipertintorero/hipertintorero.libraries.yml
+++ b/web/themes/hipertintorero/hipertintorero.libraries.yml
@@ -1,23 +1,35 @@
 global-styling:
   css:
     theme:
-      fonts/icon-7/css/pe-icon-7-stroke.css: {}
-      fonts/icon-7/css/helper.css: {}
+      #fonts/icon-7/css/pe-icon-7-stroke.css: {}
+      #fonts/icon-7/css/helper.css: {}
       fonts/renovation/icon-font-renovation.css: {}
       components/mmenu/jquery.mmenu.all.css: {}
       components/font-awesome/css/font-awesome.css: {}
-      components/owl.carousel/assets/owl.carousel.css: {}
-      components/lightgallery/css/lightgallery.css: {}
+      #components/lightgallery/css/lightgallery.css: {}
       components/bootstrap/css/bootstrap.css: {}
+      components/owl.carousel/assets/owl.carousel.css: {}
+      components/owl.carousel/assets/owl.theme.default.css: {}
       components/slider/slider.css: {}
       css/hipertintorero.css: {}
   js:
-    #components/bootstrap/js/bootstrap.js: { scope: footer }
-    components/owl.carousel/owl.carousel2.js: { scope: footer }
+    components/bootstrap/js/bootstrap.min.js: { scope: footer }
     #components/parallax.js/parallax.js: { scope: footer }
     components/scrollup/jquery.scrollUp.js: { scope: footer }
     #components/lightgallery/js/lightgallery.js: { scope: footer }
     components/mmenu/jquery.mmenu.min.all.js: { scope: footer }
+    #components/isotope.pkgd.min.js: { scope: footer }
+    #components/jquery.directional-hover.min.js: { scope: footer }
+    #components/imagesloaded.pkgd.min.js: { scope: footer }
+    components/owl.carousel/owl.carousel2.js: { scope: footer }
+    js/hipertintorero.js: { scope: footer }
+  dependencies:
+    - core/jquery
+    - core/jquery.once
+    - core/drupal
+
+revolution-slider:
+  js:
     components/slider/jquery.themepunch.tools.min.js: { scope: footer }
     components/slider/jquery.themepunch.revolution.min.js: { scope: footer }
     components/slider/extensions/revolution.extension.actions.min.js: { scope: footer }
@@ -29,11 +41,4 @@ global-styling:
     components/slider/extensions/revolution.extension.parallax.min.js: { scope: footer }
     components/slider/extensions/revolution.extension.slideanims.min.js: { scope: footer }
     components/slider/extensions/revolution.extension.video.min.js: { scope: footer }
-    #components/isotope.pkgd.min.js: { scope: footer }
-    #components/jquery.directional-hover.min.js: { scope: footer }
-    #components/imagesloaded.pkgd.min.js: { scope: footer }
-    js/hipertintorero.js: { scope: footer }
-  dependencies:
-    - core/jquery
-    - core/jquery.once
-    - core/drupal
+    js/slider.js: { scope: footer }
